# flutter_surrealdb_engine

./: .metadata  README.md  pubspec.yaml  test_curl_signup.sh
android/: build.gradle
example/: pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt
integration_test/: simple_test.dart
ios/: flutter_surrealdb_engine.podspec
lib/: flutter_surrealdb_engine.dart  surrealdb_method_channel.dart  surrealdb_platform_interface.dart
linux/: CMakeLists.txt  surrealdb_plugin.cc  surrealdb_plugin_private.h
macos/: flutter_surrealdb_engine.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: client.rs  mod.rs  models.rs  realtime.rs
rust/src/api/live_query/: manager.rs  mod.rs  models.rs  stream.rs
rust/src/internal/: auth.rs  converter.rs  crud.rs  mod.rs  queries.rs
rust/tests/: client_side_parsing.rs  dance_graph.rs  integration_test.rs  live_query_pure_test.rs  recordid_cast.rs  test_connect.rs  test_crud.rs  test_dev_sidecar.rs  test_live_query.rs  test_query.rs  test_query_vars.rs  test_remote_connect.rs  test_signin_live.rs  test_signup_live.rs  test_storage.rs  test_transaction.rs
rust/tests/common/: mod.rs
rust_builder/: pubspec.yaml
test/: connection_test.dart  query_test.dart  surrealdb_method_channel_test.dart  surrealdb_test.dart  test_live_signup.dart  test_live_signup_raw.dart  test_native_signup_success.dart  test_verify_jwt.dart
windows/: CMakeLists.txt  surrealdb_plugin.cpp  surrealdb_plugin.h  surrealdb_plugin_c_api.cpp
(+48 files in other folders)
