[package]
name = "rust_lib_surrealdb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Strict features: no RocksDB, no HTTP, no WS.
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v3.0.0-beta.1", features = ["kv-surrealkv", "kv-mem", "protocol-ws", "protocol-http"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3.31"
log = "0.4.29"
dashmap = "5"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
serde_json = "1"
futures = "0.3"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
